<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:weightSum="1">


    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_title_text"
        android:id="@+id/textView"
        />

    <EditText
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_genre_text"
        android:id="@+id/textView2"
        />

    <EditText
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_url_text"
        android:id="@+id/textView3"
        />

    <EditText
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"/>

    <TextView
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_rating_text"
        android:id="@+id/textView4"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_gravity="center_horizontal"
        />


    <CheckBox
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_watched_text"
        android:id="@+id/checkBox"
        />

</LinearLayout>
